Translate UI text

--- a/src/template.html
+++ b/src/template.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/src/style.css" type="text/css">
 <div class="web-share" style="display: none">
 	<div class="web-share-container web-share-grid">
-	  	<div class="web-share-title">SHARE VIA</div>
+	  	<div class="web-share-title">DELEN MET</div>
 		<a class="web-share-item web-share-whatsapp" data-action="share/whatsapp/share" target="_blank">
 	      	<div class="web-share-icon-whatsapp"></div>
 	     	<div class="web-share-item-desc">Whatsapp</div>
@@ -27,5 +27,5 @@
 	        <div class="web-share-item-desc">Copy</div>
 	    </a>
 	</div>
-	<div class="web-share-container web-share-cancel">Cancel</div>
+	<div class="web-share-container web-share-cancel">Annuleren</div>
 </div>
